@@ -875,7 +875,6 @@ void check_mail_expiration(void);
 void check_mail(dbref player, int folder, bool silent);
 const char *mail_fetch_message(dbref player, int num);
 int  mail_fetch_from(dbref player, int num);
-void raw_notify_html(dbref player, const char *msg);
 void raw_notify_html(dbref player, mux_string &sMsg);
 void do_lock(dbref executor, dbref caller, dbref enactor, int key,
                     int nargs, char *name, char *keytext);
