@@ -51,6 +51,7 @@ Bug Fixes:
  -- Fix trailing padding in CENTER() (Issue 253).
  -- mid(abc,-1,2) now returns a, not ab. mid(abc,1,-2) now returns
     ab, not a.  This is the documented behavior.
+ -- wordpos() did not strip ansi before counting characters.
 
 
 Performance Enhancements:
